examples/type-compatibility/enum.ts

enum Status { Ready, Waiting };
enum Color { Red, Blue, Green };

let status2 = Status.Ready;
// status = Color.Green;  //error